My POrg/src/objects/Child_Object__c.object
<CustomObject>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Master_Object__c</fullName>
        <label>Master Object</label>
        <referenceTo>Master_Object__c</referenceTo>
        <relationshipLabel>Child Objects</relationshipLabel>
        <relationshipName>Child_Objects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Child Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Child Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>